# drim

./: AnsiScreen.cpp  AnsiScreen.h  CMakeLists.txt  Context.h  Document.h  EmptyDocument.cpp  EmptyDocument.h  Event.h  InputEventSource.cpp  InputEventSource.h  InsertContextFactory.h  InsertContextMatch.h  LICENSE  MATERIAL.md  MainContext.cpp  Match.h  README.md  Screen.h  TextDocument.h  conanfile.txt  drim.cpp
core/: AnsiScreen.h  CMakeLists.txt  Document.h  EmptyDocument.cpp  EmptyDocument.h  Event.h  EventQueue.cpp  EventQueue.h  InsertDocument.cpp  InsertDocument.h  LineView.cpp  LineView.h  MainContext.h  Position.h  Screen.h  SelectView.cpp  SelectView.h  TextDocument.cpp  TextDocument.h  TotalView.cpp  TotalView.h  View.h
test/: CMakeLists.txt  DocumentText.cpp  DocumentText.h  EmptyDocumentTest.cpp  EmptyDocumentTest.h  EventQueueTest.cpp  EventQueueTest.h  InsertDocumentTest.cpp  InsertDocumentTest.h  TextDocumentTest.cpp  TextDocumentTest.h  test.cpp
